Configure environments prod and dev with npn and gulp

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./prod/css/iai.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <!-- <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">Navbar Links</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
@@ -157,8 +157,9 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <!-- <script src="prod/js/materialize.js"></script> -->
+  <!-- <script src="prod/js/init.js"></script> -->
+  <script src="prod/js/iai.js"></script>
 
   </body>
 </html>
