add gulp Del module to clean prod before build & add gulp default task

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./prod/css/iai.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./prod/css/iai.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <!-- <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
 </head>
 <body>
@@ -159,7 +159,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- <script src="prod/js/materialize.js"></script> -->
   <!-- <script src="prod/js/init.js"></script> -->
-  <script src="prod/js/iai.js"></script>
+  <script src="prod/js/iai.min.js"></script>
 
   </body>
 </html>
